BuiA_HW1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/hamcrest-library-1.3.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/qw/pqygrw4n06qgsmyxmb_x5t8w0000gn/T/AppTranslocation/6D7BAE4F-200A-439A-9844-0574095318F5/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/vubui/Downloads/HW2 starter code
-d
/Users/vubui/Downloads/HW2 starter code/doc
-encoding
UTF-8
-charset
UTF-8
/Users/vubui/Downloads/HW2 starter code/Craps.java
<---- end of javadoc command ---->
Loading source file /Users/vubui/Downloads/HW2 starter code/Craps.java...
/Users/vubui/Downloads/HW2 starter code/Craps.java:120: error: class, interface, or enum expected
}
^
1 error
